--- a/views/contact.html
+++ b/views/contact.html
@@ -1,14 +1,15 @@
-<div class="vert-layout contact-box">
+<div class="vert-layout contact-box animated fadeIn">
     <div class="contained">
         <div class="row-set">
             <div class="col s6">
                 <h4>Hours</h4>
-                <p>??????????</p>
+                <p>4pm to 2am Everyday</p>
                 <h5>Happy Hour</h5>
-                <p>all day everyday</p>
+                <p>4pm to 8pm Everyday</p>
                 <h4>Contact</h4>
                 <p>
-                    <i class="fa fa-envelope" aria-hidden="true"></i> lambdalambdalambda@gmail.com
+                    <i class="fa fa-envelope" aria-hidden="true"></i> info@lambdalounge.com
+                    <br><i class="fa fa-map-marker" aria-hidden="true"></i> 619 E Pine St, Seattle, WA 98122
                 </p>
                 <div class="row-set">
                     <div class="col s2">
