--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,4 +1,4 @@
-<div class="vert-gallery">
+<div class="vert-gallery animated fadeIn">
     <div class="contain-flex">
         <div class="flex-row row-set gallery">
             <div class="col s4">
