--- a/views/home.html
+++ b/views/home.html
@@ -1,13 +1,7 @@
-<div class="vert-home">
+<div class="vert-home animated fadeIn">
     <div class="contain-flex">
-        <div class="home-box">
-            <!--      <div class="flex-col row-set">
-                <div class="col s12">
-                    <div class="logo"> -->
+        <div class="home-box centered">
             <img class="img-shrink" src="./img/lambda.png">
-            <!--  </div>
-                </div>
-            </div> -->
         </div>
         <div id="event-box">
             <div class="flex-row row-set">
