--- a/views/layout.html
+++ b/views/layout.html
@@ -1,11 +1,11 @@
-<div class="vert-layout contact-box">
+<div class="vert-layout contact-box animated fadeIn">
     <div class="contain-flex">
         <div class="flex-row row-set">
             <div class="col s6 layout-col">
                 Three floors, each with their own individual bar, so you never have to worry about heading up and down stairs to have a good time. The 1<sup>st</sup> and 2<sup>nd</sup> floors are lounge areas, where you and your friends can find time to relax and get ready to head to the 3<sup>rd</sup> floor where the dancefloor/stage is - complete with dancers on their own platforms to add to the fun. Fun tip: don't forget to tip our dancers!
             </div>
             <div class="col s6 layout-img">
-                <img class="img-fit" src="img/bottomfloor.jpg">
+                <img class="img-shrink" src="img/bottomfloor.jpg">
             </div>
         </div>
     </div>
