finished finalized version of gallery, about, and carousel on homepage

--- a/views/about.html
+++ b/views/about.html
@@ -1,5 +1,5 @@
 <div class="vert about-box animated fadeIn">
     <div class="contained">
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veritatis, ratione aut laudantium sit ducimus at sed, a, quos quibusdam vero veniam voluptates illum deleniti pariatur! Error at, itaque! Quasi, deserunt.
+        Seattle's newest nightclub, Lamba Lounge serves as the go to place to have a night full of fun and excitement. Always inclusive and always welcoming, we serve as a safe space to let yourself loose and feel great doing it. Jampacked with a state of the art sound system on our dancefloor and amazing drinks on each floor, our goal is for you to leave your troubles at the door and join us in the lounge.
     </div>
 </div>
