--- a/views/gallery.html
+++ b/views/gallery.html
@@ -1,48 +1,48 @@
 <div class="vert-gallery animated fadeIn">
-    <div class="contain-flex">
-        <div class="flex-row row-set gallery">
-            <div class="col s4">
+    <div class="contain-flex gallery">
+        <div class="flex-row row-set">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party1.jpg" alt="party pic">
                 </a>
             </div>
-            <div class="col s4">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party2.jpg" alt="party pic">
                 </a>
             </div>
-            <div class="col s4">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party3.jpg" alt="party pic">
                 </a>
             </div>
         </div>
         <div class="flex-row row-set">
-            <div class="col s6">
+            <div class="col s6 gallery-pic">
                 <a href="">
-                    <img class="img-fit gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-fit" src="../img/party4.jpg" alt="party pic">
                 </a>
             </div>
-            <div class="col s6">
+            <div class="col s6 gallery-pic">
                 <a href="">
-                    <img class="img-fit gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-fit" src="../img/party10.jpg" alt="party pic">
                 </a>
             </div>
         </div>
         <div class="flex-row row-set">
-            <div class="col s4">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party9.jpg" alt="party pic">
                 </a>
             </div>
-            <div class="col s4">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party10.jpg" alt="party pic">
                 </a>
             </div>
-            <div class="col s4">
+            <div class="col s4 gallery-pic">
                 <a href="">
-                    <img class="img-shrink gallery-pic" src="../img/pubhome.jpg">
+                    <img class="img-shrink" src="../img/party11.jpeg" alt="party pic">
                 </a>
             </div>
         </div>
