--- a/css/style.css
+++ b/css/style.css
@@ -182,6 +182,7 @@ a:hover {
 .ev-not-title {
     font-size: 14px;
     font-weight: 200;
+    color: #F7E45C;
 }
 
 .ev-pad {
@@ -258,8 +259,12 @@ button {
 
 /* Gallery */
 
-.gallery-pic:hover {
-    filter: grayscale(100%) blur(20%);
+.gallery {
+    height: auto;
+}
+
+.gallery-pic img:hover {
+    filter: grayscale(100%) !important;
 }
 
 
