--- a/views/events.html
+++ b/views/events.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="row-set event-row">
                             <div class="col s6 event-col">
-                                <img class="img-shrink" src="../img/diplo.png" aly="diplo logo">
+                                <img class="img-shrink diplo" src="../img/diplo.png" aly="diplo logo">
                             </div>
                             <div class="col s6 event-col">
                                 Date: 6/18
