--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
 #bs-override {
     margin: 0;
     color: white;
-    background: url(../img/barbg.png) no-repeat center center fixed;
+    background: url(../img/barbg.jpg) no-repeat center center fixed;
     background-size: cover;
     color: white;
     font-family: 'Raleway', sans-serif;
@@ -194,7 +194,7 @@ a:hover {
 /* About */
 
 .about-box {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     height: 20em;
     padding: 7.5em;
 }
@@ -216,12 +216,16 @@ a:hover {
 
 /* Event Page */
 
+.diplo {
+    background-color: rgba(255, 255, 255, .8);
+}
+
 .event-title {
     font-size: 18px;
 }
 
 .event-page {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     padding: 2em;
 }
 
@@ -252,7 +256,7 @@ button {
 /* Contact */
 
 .contact-box {
-    background-color: rgba(0, 0, 0, .5);
+    background-color: rgba(0, 0, 0, .8);
     padding: 2em;
 }
 
