--- a/public/css/style.css
+++ b/public/css/style.css
@@ -309,6 +309,15 @@ button {
     margin-right: -0.75rem;
 }
 
+/* Media Queries */
+
+@media only screen and (min-width: 500px) {
+    .contained {
+        width: 90%;
+    }
+}
+
+
 @media only screen and (min-width: 601px) {
     .contained {
         width: 85%;
@@ -322,9 +331,10 @@ button {
 }
 
 
+
 /* Row-set/Column Structure */
 
-.row-set {
+.row-set { 
     margin-left: auto;
     margin-right: auto;
 }
@@ -424,3 +434,4 @@ button {
     left: auto;
     right: auto;
 }
+
