--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,5 +1,4 @@
-<nav class="navi">
-    <ul>
+    <ul class="navi">
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
@@ -7,4 +6,3 @@
         <li><a href="/layout">The Layout</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
-</nav>
