--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,8 +1,14 @@
-    <ul class="navi">
+<nav id="nav" class="navi" role="navigation">
+    <a href="#nav" title="Show navigation"><i class="fa fa-bars fa-lg" aria-hidden="true"></i>
+Menu</a>
+    <a href="#" title="Hide navigation"><i class="fa fa-times fa-2x" aria-hidden="true"></i>
+</a>
+    <ul>
         <li><a href="/">Home</a></li>
         <li><a href="/about">About</a></li>
         <li><a href="/events">Events</a></li>
         <li><a href="/gallery">Gallery</a></li>
-        <li><a href="/layout">The Layout</a></li>
+        <li><a href="/layout">Layout</a></li>
         <li><a href="/contact">Contact</a></li>
     </ul>
+</nav>
