--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,6 +7,8 @@
     background-size: cover;
     color: white;
     font-family: 'Raleway', sans-serif;
+    height: 100vh; 
+    width:100vw;
 }
 
 #bs-override a:active,
