--- a/public/views/navbar.html
+++ b/public/views/navbar.html
@@ -1,3 +1,6 @@
+<div class="header-top home-box centered">
+    <img class="img-shrink" src="./img/lambda.png">
+</div>
 <nav id="nav" class="navi" role="navigation">
     <a href="#nav" title="Show navigation"><i class="fa fa-bars fa-lg" aria-hidden="true"></i>
 Menu</a>
