--- a/public/views/events.html
+++ b/public/views/events.html
@@ -1,4 +1,4 @@
-<div class="contain-flex animated fadeIn">
+<div class="event-container contain-flex animated fadeIn">
     <div class="flex-row">
         <div class="vert-event event-page">
             <h3 class="centered">June 2017</h3>
