--- a/public/views/contact.html
+++ b/public/views/contact.html
@@ -1,7 +1,9 @@
-<div class="vert-layout contact-box animated fadeIn">
-    <div class="contained">
-        <div class="row-set">
-            <div class="col s6">
+<div class="contact-box animated fadeIn">
+    <div class="about-blurb">
+        <p>Seattle's newest nightclub, Lamba Lounge serves as the go to place to have a night full of fun and excitement. Always inclusive and always welcoming, we serve as a safe space to let yourself loose and meet amazing new people. Jampacked with a state of the art sound system on our dancefloor and amazing drinks on each floor, our goal is for you to leave your troubles at the door and join us in the lounge.</p>
+    </div>
+    <div class="contact-container">
+            <div class="col s6 info-socials">
                 <h4>Hours</h4>
                 <p>4pm to 2am Everyday</p>
                 <h5>Happy Hour</h5>
@@ -27,6 +29,5 @@
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2689.5690750809254!2d-122.32585044865301!3d47.61506827908312!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x54906acb61cca5f9%3A0xf26fba72b9099b47!2sR+Place!5e0!3m2!1sen!2sus!4v1497400268542" width="300" height="300" frameborder="0" style="filter:grayscale(100%);" allowfullscreen></iframe>
                 <br />
             </div>
-        </div>
     </div>
 </div>
