--- a/public/views/events.html
+++ b/public/views/events.html
@@ -1,6 +1,6 @@
 <div class="event-container contain-flex animated fadeIn">
     <div class="flex-row">
-        <div class="vert-event event-page">
+        <div class="event-page">
             <h3 class="centered">June 2017</h3>
             <div class="contained">
                 <div class="row-set">
