--- a/public/css/style.css
+++ b/public/css/style.css
@@ -126,6 +126,63 @@ a:hover {
     top: 0;
 }
 
+/* Homepage */
+
+.home {
+    margin: 0 auto;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+}
+
+.home-container {
+    margin: 18% auto;
+    width: 50%;
+    padding: 3em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    background-color: #000;
+}
+
+.home-content {
+    text-align: center;
+}
+
+.home-cta-section {
+    display: flex;
+}
+
+.home-btn-container {
+    margin: .2em;
+    background-color: #F4A700;
+    width: 250px;
+    height: 300px;
+    height: fit-content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.home-btn-container:hover {
+    background-color: #FFF;
+}
+
+a.home-cta {
+    width: 100%;
+    text-align: center;
+    padding: 1em;
+    color: #000;
+    font-size: 18px;
+    font-weight: 900;
+    text-transform: uppercase;
+}
+
+a.home-cta:hover {
+    color: #000 !important;
+}
+
 @media only screen and (max-width: 40em) {
 
     #nav > a {
@@ -160,6 +217,26 @@ a:hover {
         margin-top: 2em;
     }
 
+    .home-container {
+        width: 100%;
+        flex-direction: column;
+        padding: 3em .5em;
+        margin-top: 10em;
+    }
+
+    .home-content {
+        margin: 2em 0;
+    }
+
+    .home-cta-section {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .home-btn-container {
+        width: 100%;
+    } 
+
     .event-page {
         margin-left: .5em;
         margin-right: .5em;
@@ -167,6 +244,7 @@ a:hover {
 
     div.event-container {
         width: 100%;
+        margin: 15em 0 !important;
     }
 
     div.contact-box {
