--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,24 +85,24 @@ a:hover {
     white-space: nowrap;
 }
 
-#nav > a {
+#menu > a {
     display: none;
 }
 
-#nav a:hover {
+#menu a:hover {
         color: #F4A700;
 }
 
-#nav li {
+#menu li {
     position: relative;
 }
  
  
-#nav > ul {
+#menu > ul {
     height: 3.75em;
 }
 
-#nav > ul > li {
+#menu > ul > li {
     width: 16.%;
     height: 100%;
     float: left;
@@ -139,6 +139,7 @@ a:hover {
     margin: 18% auto;
     width: 50%;
     padding: 3em;
+    height: fit-content;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
@@ -185,15 +186,15 @@ a.home-cta:hover {
 
 @media only screen and (max-width: 40em) {
 
-    #nav > a {
+    #menu > a {
         color: #FFF;
     }
 
-    #nav:not( :target) > a:first-of-type, #nav:target > a:last-of-type {
+    #menu:not( :target) > a:first-of-type, #menu:target > a:last-of-type {
         display: block;
     }
 
-    #nav > ul {
+    #menu > ul {
         height: auto;
         display: none;
         position: absolute;
@@ -203,11 +204,11 @@ a.home-cta:hover {
         margin-left: 0;
     }
 
-    #nav:target > ul {
+    #menu:target > ul {
         display: block;
     }
 
-    #nav > ul > li {
+    #menu > ul > li {
         width: 100%;
         float: none;
         margin-left: 0;
